syntax = "proto3";

import "google/protobuf/struct.proto";

package services.bria.v1;

option go_package = "github.com/GaloyMoney/terraform-provider-bria/client/proto/briav1";

service BriaService {
  rpc CreateProfile (CreateProfileRequest) returns (CreateProfileResponse) {}
  rpc ListProfiles (ListProfilesRequest) returns (ListProfilesResponse) {}
  rpc CreateProfileApiKey (CreateProfileApiKeyRequest) returns (CreateProfileApiKeyResponse) {}
  rpc ImportXpub (ImportXpubRequest) returns (ImportXpubResponse) {}
  rpc SetSignerConfig (SetSignerConfigRequest) returns (SetSignerConfigResponse) {}
  rpc CreateWallet (CreateWalletRequest) returns (CreateWalletResponse) {}
  rpc GetWalletBalanceSummary (GetWalletBalanceSummaryRequest) returns (GetWalletBalanceSummaryResponse) {}
  rpc NewAddress (NewAddressRequest) returns (NewAddressResponse) {}
  rpc UpdateAddress (UpdateAddressRequest) returns (UpdateAddressResponse) {}
  rpc ListAddresses (ListAddressesRequest) returns (ListAddressesResponse) {}
  rpc ListUtxos (ListUtxosRequest) returns (ListUtxosResponse) {}
  rpc CreateBatchGroup (CreateBatchGroupRequest) returns (CreateBatchGroupResponse) {}
  rpc QueuePayout (QueuePayoutRequest) returns (QueuePayoutResponse) {}
  rpc ListPayouts (ListPayoutsRequest) returns (ListPayoutsResponse) {}
  rpc ListSigningSessions (ListSigningSessionsRequest) returns (ListSigningSessionsResponse) {}

  rpc SubscribeAll (SubscribeAllRequest) returns (stream BriaEvent) {}
}

message CreateProfileRequest {
  string name = 1;
}

message CreateProfileResponse {
  string id = 1;
}

message CreateProfileApiKeyRequest {
  string profile_name = 1;
}

message CreateProfileApiKeyResponse {
  string id = 1;
  string key = 2;
}

message ListProfilesRequest {}

message Profile {
  string id = 1;
  string name = 2;
}

message ListProfilesResponse {
  repeated Profile profiles = 1;
}

message ImportXpubRequest {
  string name = 1;
  string xpub = 2;
  string derivation = 3;
}

message ImportXpubResponse {
  string id = 1;
}

message SetSignerConfigRequest {
  string xpub_ref = 1;
  oneof config {
    LndSignerConfig lnd = 2;
    BitcoindSignerConfig bitcoind = 3;
  }
}

message LndSignerConfig {
  string endpoint = 1;
  string cert_base64 = 2;
  string macaroon_base64 = 3;
}

message BitcoindSignerConfig {
  string endpoint = 1;
  string rpc_user = 2;
  string rpc_password = 3;
}

message SetSignerConfigResponse {}

message CreateWalletRequest {
  string name = 1;
  repeated string xpub_refs = 2;
}

message CreateWalletResponse {
  string id = 1;
}

message NewAddressRequest {
  string wallet_name = 1;
  optional string external_id = 2;
  optional google.protobuf.Struct metadata = 3;
}

message NewAddressResponse {
  string address = 1;
}

message UpdateAddressRequest {
  string address = 2;
  optional string new_external_id = 3;
  optional google.protobuf.Struct new_metadata = 4;
}

message UpdateAddressResponse { }

message ListAddressesRequest {
  string wallet_name = 1;
}

message ListAddressesResponse {
  string wallet_id = 1;
  repeated WalletAddress addresses = 2;
}

message WalletAddress {
  string address = 1;
  string external_id = 2;
  optional google.protobuf.Struct metadata = 3;
}

message ListUtxosRequest {
  string wallet_name = 1;
}

message Utxo {
  string outpoint = 1;
  uint32 address_idx = 2;
  uint64 value = 3;
  optional string address = 4;
  bool change_output = 5;
  optional uint32 block_height = 6;
}

message KeychainUtxos {
  string keychain_id = 1;
  repeated Utxo utxos = 2;
}

enum KeychainKind {
  INTERNAL = 0;
  EXTERNAL = 1;
}

message ListUtxosResponse {
  string wallet_id = 1;
  repeated KeychainUtxos keychains = 2;
}


message GetWalletBalanceSummaryRequest {
  string wallet_name = 1;
}

message GetWalletBalanceSummaryResponse {
  uint64 logical_pending_income = 1;
  uint64 logical_settled = 2;
  uint64 logical_pending_outgoing = 3;
  uint64 logical_encumbered_outgoing = 4;
  uint64 encumbered_incoming_utxos = 5;
  uint64 pending_incoming_utxos = 6;
  uint64 settled_utxos = 7;
  uint64 pending_outgoing_utxos = 8;
  uint64 pending_fees = 9;
  uint64 encumbered_fees = 10;
}

message CreateBatchGroupRequest {
  string name = 1;
  optional string description = 2;
  BatchGroupConfig config = 3;
}

message BatchGroupConfig {
  TxPriority tx_priority = 1;
  bool consolidate_deprecated_keychains = 2;
  oneof trigger {
    bool manual = 3;
    bool immediate = 4;
    uint32 interval_secs = 5;
  }
}

enum TxPriority {
  NEXT_BLOCK = 0;
  ONE_HOUR = 1;
  ECONOMY = 2;
}

message CreateBatchGroupResponse {
  string id = 1;
}

message QueuePayoutRequest {
  string wallet_name = 1;
  string batch_group_name = 2;
  oneof destination {
    string onchain_address = 3;
  };
  uint64 satoshis = 4;
  optional google.protobuf.Struct metadata = 5;
}

message QueuePayoutResponse {
  string id = 1;
}

message ListPayoutsRequest {
  string wallet_name = 1;
}

message Payout {
  string id = 1;
  string wallet_id = 2;
  string batch_group_id = 3;
  optional string batch_id = 4;
  uint64 satoshis = 5;
  oneof destination {
    string onchain_address = 6;
  }
  string external_id = 7;
}


message ListPayoutsResponse {
  repeated Payout payouts = 1;
}

message ListSigningSessionsRequest {
  string batch_id = 1;
}

message SigningSession {
  string id = 1;
  string batch_id = 2;
  string xpub_id = 3;
  string state = 4;
  optional string failure_reason = 5;
}

message ListSigningSessionsResponse {
  repeated SigningSession sessions = 1;
}

message SubscribeAllRequest {
  optional uint64 after_sequence = 1;
  optional bool augment = 2;
}

message BriaEvent {
  uint64 sequence = 1;
  uint32 recorded_at = 2;
  optional EventAugmentation augmentation = 3;
  oneof payload {
    UtxoDetected utxo_detected = 4;
    UtxoSettled utxo_settled = 5;
  }
}

message EventAugmentation {
  optional WalletAddress address_info = 1;
}

message UtxoDetected {
  string wallet_id = 1;
  string tx_id = 2;
  uint32 vout = 3;
  uint64 satoshis = 4;
  string address = 5;
}

message UtxoSettled {
  string wallet_id = 1;
  string tx_id = 2;
  uint32 vout = 3;
  uint64 satoshis = 4;
  string address = 5;
  uint32 block_height = 6;
  uint64 block_time = 7;
}
